--- a/assets/styles/quest.css
+++ b/assets/styles/quest.css
@@ -24,19 +24,23 @@ body {
   font-style: normal;
 }
 
-.perfil img {
+.perfil button {
   width: 34px;
   display: flex;
+  background-color: #dee1ff;
+  border: 1px #dee1ff solid;
   justify-content: flex-start;
   align-items: flex-start;
 }
 
-.inseguranças {
+.inseguranças input {
   background-color: white;
   border-radius: 20px;
   width: 390px;
   height: 40px;
   gap: 19px;
+  border: #ffff;
+  padding: 5px;
 }
 
 .inseguranças p {
@@ -47,11 +51,13 @@ body {
   padding: 10px;
 }
 
-.autoestima {
+.autoestima input {
   background-color: white;
   border-radius: 20px;
   width: 390px;
   height: 40px;
+  border: #ffff;
+  padding: 5px;
 }
 
 .autoestima p {
@@ -62,11 +68,13 @@ body {
   padding: 10px;
 }
 
-.confiança {
+.confiança input {
   background-color: white;
   border-radius: 20px;
   width: 390px;
   height: 40px;
+  border: #ffff;
+  padding: 5px;
 }
 
 .confiança p {
@@ -77,11 +85,13 @@ body {
   padding: 10px;
 }
 
-.medo {
+.medo input {
   background-color: white;
   border-radius: 20px;
   width: 390px;
   height: 40px;
+  border: #ffff;
+  padding: 5px;
 }
 
 .medo p {
@@ -92,11 +102,13 @@ body {
   padding: 10px;
 }
 
-.avaliação {
+.avaliação input {
   background-color: white;
   border-radius: 20px;
   width: 390px;
   height: 40px;
+  border: #ffff;
+  padding: 5px;
 }
 
 .avaliação p {
@@ -107,11 +119,13 @@ body {
   padding: 10px;
 }
 
-.melhoras {
+.melhoras input {
   background-color: white;
   border-radius: 20px;
   width: 390px;
   height: 40px;
+  border: #ffff;
+  padding: 10px;
 }
 
 p {
@@ -145,23 +159,17 @@ p {
   margin: 70px;
 }
 
-.botao {
+.botao button {
   display: flex;
+  color: #ffff;
+  border: 1px #67a4b4 solid;
   background-color: #67a4b4;
   align-items: center;
+  justify-content: center;
   margin: 10px;
   width: 158px;
   height: 35px;
   border-radius: 20px;
-}
-
-.botao p {
-  display: flex;
-  align-items: center;
-  color: white;
-  height: 24px;
-  width: 69px;
-  padding-left: 60px;
 }
 
 .entre {
