--- a/assets/styles/per.css
+++ b/assets/styles/per.css
@@ -2,169 +2,178 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Mallanna", sans-serif;
+}
+
+body {
+  background-color: #dee1ff;
+  background-image: url(../images/logoopaca.png);
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-clip: initial;
+  justify-content: center;
+}
+
+.titulo {
+  display: flex;
+  justify-content: center;
+  font-size: 40px;
+  color: #66629a;
+  font-family: "Pattaya", sans-serif;
   font-weight: 400;
   font-style: normal;
 }
 
-body {
-  background: #dee1ff;
-}
-
-.esquerdo {
+.perfil button {
+  width: 34px;
   display: flex;
-  flex-direction: column;
+  background-color: #dee1ff;
+  border: 1px #dee1ff solid;
+  justify-content: flex-start;
   align-items: flex-start;
-  gap: 30px;
-  margin: 70px;
 }
 
-.direita {
-  display: flex;
-  justify-content: flex-end;
-  align-items: flex-start;
-  margin: 30px;
-}
-
-.persona {
-  display: flex;
-  justify-content: center;
-  color: #5a94b1;
-  height: 15px;
-}
-/* .cadastro{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  gap: 19px;   
-} */
-.apelido input {
-  border: #ffff solid;
+.inseguranças input {
   background-color: white;
   border-radius: 20px;
   width: 390px;
   height: 40px;
   gap: 19px;
+  border: #ffff;
+  padding: 5px;
 }
 
-.data input {
-  background-color: white;
-  border-radius: 20px;
-  width: 390px;
-  height: 40px;
-  border: #ffff solid;
-}
-
-.phone input {
-  background-color: white;
-  border-radius: 20px;
-  width: 390px;
-  border: #ffff solid;
-  height: 40px;
-}
-
-.local input {
-  background-color: white;
-  border-radius: 20px;
-  width: 390px;
-  border: #ffff solid;
-  height: 40px;
-}
-
-.cores {
-  display: flex;
-  justify-content: space-evenly;
-  width: 330px;
-}
-
-.tema {
+.inseguranças p {
+  color: #7773b1;
+  background: none;
   display: flex;
   justify-content: flex-start;
+  padding: 10px;
 }
 
-.tema p {
-  color: #392d6e;
+.autoestima input {
+  background-color: white;
+  border-radius: 20px;
+  width: 390px;
+  height: 40px;
+  border: #ffff;
+  padding: 5px;
+}
+
+.autoestima p {
+  color: #7773b1;
+  background: none;
+  display: flex;
+  justify-content: flex-start;
+  padding: 10px;
+}
+
+.confiança input {
+  background-color: white;
+  border-radius: 20px;
+  width: 390px;
+  height: 40px;
+  border: #ffff;
+  padding: 5px;
+}
+
+.confiança p {
+  color: #7773b1;
+  background: none;
+  display: flex;
+  justify-content: flex-start;
+  padding: 10px;
+}
+
+.medo input {
+  background-color: white;
+  border-radius: 20px;
+  width: 390px;
+  height: 40px;
+  border: #ffff;
+  padding: 5px;
+}
+
+.medo p {
+  color: #7773b1;
+  background: none;
+  display: flex;
+  justify-content: flex-start;
+  padding: 10px;
+}
+
+.avaliação input {
+  background-color: white;
+  border-radius: 20px;
+  width: 390px;
+  height: 40px;
+  border: #ffff;
+  padding: 5px;
+}
+
+.avaliação p {
+  color: #7773b1;
+  background: none;
+  display: flex;
+  justify-content: flex-start;
+  padding: 10px;
+}
+
+.melhoras input {
+  background-color: white;
+  border-radius: 20px;
+  width: 390px;
+  height: 40px;
+  border: #ffff;
+  padding: 10px;
+}
+
+p {
+  color: #7773b1;
+  background: none;
+  display: flex;
+  justify-content: flex-start;
+  padding: 10px;
+  font-family: arial, sans-serif;
+}
+
+.perguntas1 {
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.perguntas2 {
+  display: flex;
+  justify-content: flex-end;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.questionario {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-left: 140px;
+  gap: 45px;
+  margin: 70px;
 }
 
-.corroxo img {
-  border-radius: 200px;
-  width: 75px;
-  height: 75px;
-  background-color: #bcc1ff;
-}
-
-.corroxo p {
-  background: none;
-}
-
-.foto img {
-  height: 350px;
-  width: 394px;
-  top: 15%;
-  right: 90px;
-  object-fit: cover;
-  position: absolute;
-}
-
-.perfil {
+.botao button {
   display: flex;
-  color: #7773b1;
-  justify-content: flex-end;
-  align-items: flex-start;
-  flex-direction: column;
-  padding-bottom: 29px;
-}
-
-.prox {
-  display: flex;
+  color: #ffff;
+  border: 1px #67a4b4 solid;
   background-color: #67a4b4;
+  align-items: center;
+  justify-content: center;
   margin: 10px;
   width: 158px;
-  height: 26px;
+  height: 35px;
   border-radius: 20px;
 }
 
-.div {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  position: absolute;
-  right: 90px;
-  top: 500px;
-  padding-right: 130px;
-}
-
-.perfil button {
-  color: #ffff;
-  font-size: 14px;
-  margin-bottom: 10px;
-  padding: 0;
-
-  border: #dee1ff solid;
+.entre {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #dee1ff;
-  color: #392d6e;
-  border-radius: 20px;
-  width: 158px;
-  height: 30px;
-  cursor: pointer;
-}
-
-.prox button {
-  border: #67a4b4 solid;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #67a4b4;
-  color: white;
-  border-radius: 20px;
-  width: 158px;
-  height: 30px;
-  cursor: pointer;
 }
