--- a/assets/styles/per.css
+++ b/assets/styles/per.css
@@ -2,178 +2,169 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-
-body {
-  background-color: #dee1ff;
-  background-image: url(../images/logoopaca.png);
-  background-size: contain;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-clip: initial;
-  justify-content: center;
-}
-
-.titulo {
-  display: flex;
-  justify-content: center;
-  font-size: 40px;
-  color: #66629a;
-  font-family: "Pattaya", sans-serif;
+  font-family: "Mallanna", sans-serif;
   font-weight: 400;
   font-style: normal;
 }
 
-.perfil button {
-  width: 34px;
-  display: flex;
-  background-color: #dee1ff;
-  border: 1px #dee1ff solid;
-  justify-content: flex-start;
-  align-items: flex-start;
+body {
+  background: #dee1ff;
 }
 
-.inseguranças input {
+.esquerdo {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 30px;
+  margin: 70px;
+}
+
+.direita {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-start;
+  margin: 30px;
+}
+
+.persona {
+  display: flex;
+  justify-content: center;
+  color: #5a94b1;
+  height: 15px;
+}
+/* .cadastro{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 19px;   
+} */
+.apelido input {
+  border: #ffff solid;
   background-color: white;
   border-radius: 20px;
   width: 390px;
   height: 40px;
   gap: 19px;
-  border: #ffff;
-  padding: 5px;
 }
 
-.inseguranças p {
-  color: #7773b1;
-  background: none;
-  display: flex;
-  justify-content: flex-start;
-  padding: 10px;
-}
-
-.autoestima input {
+.data input {
   background-color: white;
   border-radius: 20px;
   width: 390px;
   height: 40px;
-  border: #ffff;
-  padding: 5px;
+  border: #ffff solid;
 }
 
-.autoestima p {
-  color: #7773b1;
-  background: none;
-  display: flex;
-  justify-content: flex-start;
-  padding: 10px;
-}
-
-.confiança input {
+.phone input {
   background-color: white;
   border-radius: 20px;
   width: 390px;
+  border: #ffff solid;
   height: 40px;
-  border: #ffff;
-  padding: 5px;
 }
 
-.confiança p {
-  color: #7773b1;
-  background: none;
-  display: flex;
-  justify-content: flex-start;
-  padding: 10px;
-}
-
-.medo input {
+.local input {
   background-color: white;
   border-radius: 20px;
   width: 390px;
+  border: #ffff solid;
   height: 40px;
-  border: #ffff;
-  padding: 5px;
 }
 
-.medo p {
-  color: #7773b1;
+.cores {
+  display: flex;
+  justify-content: space-evenly;
+  width: 330px;
+}
+
+.tema {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.tema p {
+  color: #392d6e;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-left: 140px;
+}
+
+.corroxo img {
+  border-radius: 200px;
+  width: 75px;
+  height: 75px;
+  background-color: #bcc1ff;
+}
+
+.corroxo p {
   background: none;
+}
+
+.foto img {
+  height: 350px;
+  width: 394px;
+  top: 15%;
+  right: 90px;
+  object-fit: cover;
+  position: absolute;
+}
+
+.perfil {
   display: flex;
-  justify-content: flex-start;
-  padding: 10px;
-}
-
-.avaliação input {
-  background-color: white;
-  border-radius: 20px;
-  width: 390px;
-  height: 40px;
-  border: #ffff;
-  padding: 5px;
-}
-
-.avaliação p {
   color: #7773b1;
-  background: none;
-  display: flex;
-  justify-content: flex-start;
-  padding: 10px;
-}
-
-.melhoras input {
-  background-color: white;
-  border-radius: 20px;
-  width: 390px;
-  height: 40px;
-  border: #ffff;
-  padding: 10px;
-}
-
-p {
-  color: #7773b1;
-  background: none;
-  display: flex;
-  justify-content: flex-start;
-  padding: 10px;
-  font-family: arial, sans-serif;
-}
-
-.perguntas1 {
-  display: flex;
-  justify-content: flex-start;
-  flex-direction: column;
-  gap: 15px;
-}
-
-.perguntas2 {
-  display: flex;
   justify-content: flex-end;
+  align-items: flex-start;
   flex-direction: column;
-  gap: 15px;
+  padding-bottom: 29px;
 }
 
-.questionario {
+.prox {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 45px;
-  margin: 70px;
-}
-
-.botao button {
-  display: flex;
-  color: #ffff;
-  border: 1px #67a4b4 solid;
   background-color: #67a4b4;
-  align-items: center;
-  justify-content: center;
   margin: 10px;
   width: 158px;
-  height: 35px;
+  height: 26px;
   border-radius: 20px;
 }
 
-.entre {
+.div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: absolute;
+  right: 90px;
+  top: 500px;
+  padding-right: 130px;
+}
+
+.perfil button {
+  color: #ffff;
+  font-size: 14px;
+  margin-bottom: 10px;
+  padding: 0;
+
+  border: #dee1ff solid;
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #dee1ff;
+  color: #392d6e;
+  border-radius: 20px;
+  width: 158px;
+  height: 30px;
+  cursor: pointer;
+}
+
+.prox button {
+  border: #67a4b4 solid;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #67a4b4;
+  color: white;
+  border-radius: 20px;
+  width: 158px;
+  height: 30px;
+  cursor: pointer;
 }
