--- a/assets/styles/conf.css
+++ b/assets/styles/conf.css
@@ -11,7 +11,7 @@
 .area {
   display: flex;
   width: 300px;
-  background: #c4c0fb;
+  background: #C4C0FB;
   display: flex;
   flex-direction: column;
   padding: 15px;
@@ -20,53 +20,66 @@
   display: flex;
   align-items: center;
 }
-.perfil {
+.perfil button{
   width: 4vw;
+  background-color: #C4C0FB;
+  border: 1px#C4C0FB solid;
 }
-.icons img {
+.icons img{
   display: flex;
   width: 3vw;
-  margin-left: 10px;
   font-size: 18px;
   cursor: pointer;
 }
+
 .funcoes {
   display: flex;
   justify-content: flex-end;
 }
+
+.funcoes button{
+  justify-content: flex-end;
+  background-color: #C4C0FB;
+  border: 1px#C4C0FB solid;
+}
+
 .Configurações {
   width: 100%;
   flex-direction: column;
   height: 90%;
-  background: #dee1ff;
+  background: #DEE1FF;
   border-radius: 10px;
   padding: 5px;
-  border: 1px solid #aaa8c5;
+  border: 1px solid #AAA8C5;
 }
 
-.conf img {
+.conf button{
   display: flex;
-  width: 4vw;
-  margin-bottom: 3px;
+  align-items: center;
+  width: 3vw;
+  margin-bottom: 4px;
   gap: 15px;
-  color: #7773b1;
+  color: #7773B1;
+  background-color: #DEE1FF;
+  border: 1px #DEE1FF solid; 
 }
-.nomes {
+.nomes{
   display: flex;
   flex-direction: row;
   gap: 10px;
   padding: 4px;
   align-items: center;
   margin-bottom: 4px;
-  color: #a8a8a8;
+  color: #A8A8A8;
   font-family: "Libre Baskerville", serif;
+
 }
 
 .conversa {
   position: relative;
   display: flex;
   align-items: center;
-  background-color: #c4c0fb;
+  background-color: #C4C0FB; 
   padding: 10px 11px;
   border-radius: 10px;
 }
@@ -74,32 +87,33 @@
 .conversa img {
   position: absolute;
   top: 50%;
-  right: 10px;
+  right: 10px; 
   transform: translateY(-10%);
-  width: 50px;
+  width: 50px; 
   height: 50px;
 }
 
-.tema {
+
+.tema{
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 20px;
-  color: #7672ae;
+  color: #7672AE;
 }
-.claro {
-  background-color: #c4c0fb;
+.claro{
+  background-color: #C4C0FB;
   color: #ffffff;
-  border: 40px;
+  border: 40px ;
   border-radius: 7px;
   text-align: center;
   font-size: 15px;
-  margin: 10px;
+  margin: 10px ;
   width: 4vw;
   padding: 3px;
 }
 
-.Inf {
+.Inf{
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -107,21 +121,23 @@
   padding: 25px;
   gap: 10px;
 }
-.Inf p {
+.Inf button{
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #c4c0fb;
-  color: #7672ae;
+  background-color: #C4C0FB;
+  color: #7672AE;
   border: 50px;
   border-radius: 7px;
   font-size: 15px;
   width: 100%;
   padding: 3px;
+  background-color: #C4C0FB;
+  border: #C4C0FB solid;
 }
 .segundo_container {
   flex: 1;
-  background: #d9f7ff;
+  background: #D9F7FF;
   padding: 20px;
   width: 100vw;
   height: 100vh;
@@ -139,19 +155,19 @@
   color: #ffffff;
 }
 
-.busca p {
+.busca p{
   display: flex;
   align-items: center;
-  color: #a8a8a8;
+  color: #A8A8A8;
 }
-.busca img {
+.busca img{
   display: flex;
   width: 2vw;
 }
-.quadrado-roxo {
+.quadrado-roxo{
   grid-template-columns: repeat(4, 1fr);
   display: grid;
-  background-color: #b9bef2;
+  background-color: #B9BEF2;
   width: 90%;
   padding: 10px;
   margin: 20px;
@@ -162,14 +178,14 @@
   margin-left: 40px;
 }
 
-.coluna1 {
+.coluna1{
   display: flex;
   flex-direction: column;
   gap: 15px;
   grid-auto-rows: 150px;
 }
 .card1 {
-  background: #d0cdff;
+  background: #D0CDFF;
   border-radius: 12px;
   flex-direction: column;
   display: flex;
@@ -183,7 +199,7 @@
   height: 145px;
   border-radius: 5px;
 }
-.card1 img {
+.card1 img{
   display: flex;
   width: 40%;
   height: 100%;
@@ -194,32 +210,32 @@
   justify-content: center;
   text-align: center;
   font-weight: bold;
-  color: #7672ae;
+  color: #7672AE;
 }
 .cardProfissional {
   display: flex;
   text-align: center;
-  background: #d0cdff;
+  background: #D0CDFF;
   padding: 10px;
   border-radius: 5px;
   font-weight: bold;
   font-size: 14px;
   width: 100%;
   height: 305px;
-  color: #7672ae;
+  color: #7672AE;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 10px;
 }
-.cardProfissional img {
+.cardProfissional img{
   width: 200px;
 }
-.coluna2 {
+.coluna2{
   display: flex;
   flex-direction: column;
   gap: 15px;
-  grid-auto-rows: 150px;
+  grid-auto-rows: 150px
 }
 .card {
   display: flex;
@@ -227,18 +243,18 @@
   justify-content: center;
   border-radius: 12px;
   text-align: center;
-  background: #f7b35e;
+  background: #F7B35E;
   font-size: 45px;
   border-radius: 5px;
   padding: 10px;
   font-weight: bolder;
   width: 100%;
   height: 145px;
-  color: #994b9a;
+  color: #994B9A;
   font-family: "Cantora One", sans-serif;
 }
 
-.coluna3 {
+.coluna3{
   display: flex;
   flex-direction: column;
   gap: 15px;
@@ -253,19 +269,19 @@
   border-radius: 5px;
   padding: 10px;
   font-weight: bolder;
-  color: #760306;
+  color: #760306; 
   font-size: 25px;
   width: 100%;
   height: 145px;
   flex-direction: column;
   font-family: "Libre Baskerville", serif;
 }
-.cardcolunas {
+.cardcolunas{
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: center; 
   text-align: center;
-  background: #f5cbe3;
+  background: #F5CBE3;
   border-radius: 5px;
   padding: 10px;
   font-weight: bold;
@@ -281,13 +297,14 @@
   height: 100%;
 }
 
+
 .cardDestaque {
   display: flex;
-  background: #ffeef4;
+  background: #FFEEF4;
   font-size: 35px;
   width: 100%;
   height: 464px;
-  color: #eb7699;
+  color: #EB7699;
   font-weight: bold;
   border-radius: 5px;
   align-items: center;
@@ -299,9 +316,9 @@
   font-weight: bolder;
   gap: 10px;
 }
-.cap {
+.cap{
   display: flex;
-  color: #eb7699;
+  color: #EB7699;
   justify-content: center;
   font-size: 10px;
 }
