--- a/assets/styles/ctt.css
+++ b/assets/styles/ctt.css
@@ -12,7 +12,7 @@
   display: flex;
   width: 300px;
   height: 100vh;
-  background: #C4C0FB;
+  background: #c4c0fb;
   display: flex;
   flex-direction: column;
   padding: 15px;
@@ -22,22 +22,22 @@
   align-items: center;
 }
 
-.perfil button{
+.perfil button {
   width: 4vw;
-  background-color: #C4C0FB;
+  background-color: #c4c0fb;
   border: 1px#C4C0FB solid;
 }
 
-.icons img{
+.icons img {
   display: flex;
   width: 3vw;
   font-size: 18px;
   cursor: pointer;
 }
 
-.funcoes button{
+.funcoes button {
   justify-content: flex-end;
-  background-color: #C4C0FB;
+  background-color: #c4c0fb;
   border: 1px#C4C0FB solid;
 }
 
@@ -45,32 +45,32 @@
   width: 100%;
   flex-direction: column;
   height: 90%;
-  background: #DEE1FF;
+  background: #dee1ff;
   border-radius: 10px;
   padding: 5px;
-  border: 1px solid #AAA8C5
+  border: 1px solid #aaa8c5;
 }
-.lista{
+.lista {
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 10px;
-  color: #736EB3;
+  color: #736eb3;
 }
-.chat-header img{
+.chat-header img {
   display: flex;
   width: 20%;
   margin-bottom: 3px;
   gap: 15px;
-  color: #7773B1;
+  color: #7773b1;
 }
 
-.nomes button{
+.nomes button {
   display: flex;
   align-items: center;
-  background-color: #DEE1FF;
-  border: 1px #DEE1FF solid; 
-  color: #7773B1;
+  background-color: #dee1ff;
+  border: 1px #dee1ff solid;
+  color: #7773b1;
   gap: 10px;
   margin-bottom: 4px;
   font-weight: bold;
@@ -80,7 +80,7 @@
   position: relative;
   display: flex;
   align-items: center;
-  background-color: #C4C0FB; 
+  background-color: #c4c0fb;
   padding: 10px 11px;
   border-radius: 10px;
 }
@@ -96,7 +96,7 @@
 
 .segundo_container {
   flex: 1;
-  background: #D9F7FF;
+  background: #d9f7ff;
   padding: 20px;
   width: 100%;
 }
@@ -113,19 +113,29 @@
   color: #ffffff;
 }
 
-.busca p{
+.busca {
+  width: 100%;
   display: flex;
   align-items: center;
-  color: #A8A8A8;
-}
-.busca img{
-  display: flex;
-  width: 2vw;
+  background-color: #ffffff;
+  border-radius: 20px;
+  padding: 5px;
 }
 
-.quadrado-roxo{
+.pesquisa img {
+  width: 4%;
+}
+
+.pesquisa input {
+  border: none;
+  outline: none;
+  flex: 1;
+  font-size: 14px;
+  background: transparent;
+}
+.quadrado-roxo {
   display: grid;
-  background-color: #B9BEF2;
+  background-color: #b9bef2;
   width: 90%;
   padding: 10px;
   margin: 20px;
@@ -136,14 +146,14 @@
   margin-left: 40px;
 }
 
-.coluna1{
+.coluna1 {
   display: flex;
   flex-direction: column;
   gap: 15px;
   grid-auto-rows: 150px;
 }
 .card1 {
-  background: #D0CDFF;
+  background: #d0cdff;
   border-radius: 12px;
   flex-direction: column;
   display: flex;
@@ -157,7 +167,7 @@
   height: 145px;
   border-radius: 5px;
 }
-.card1 img{
+.card1 img {
   display: flex;
   width: 40%;
   height: 100%;
@@ -168,32 +178,32 @@
   justify-content: center;
   text-align: center;
   font-weight: bold;
-  color: #7672AE;
+  color: #7672ae;
 }
 .cardProfissional {
   display: flex;
   text-align: center;
-  background: #D0CDFF;
+  background: #d0cdff;
   padding: 10px;
   border-radius: 5px;
   font-weight: bold;
   font-size: 14px;
   width: 100%;
   height: 305px;
-  color: #7672AE;
+  color: #7672ae;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 10px;
 }
-.cardProfissional img{
+.cardProfissional img {
   width: 200px;
 }
-.coluna2{
+.coluna2 {
   display: flex;
   flex-direction: column;
   gap: 15px;
-  grid-auto-rows: 150px
+  grid-auto-rows: 150px;
 }
 .card {
   display: flex;
@@ -201,18 +211,18 @@
   justify-content: center;
   border-radius: 12px;
   text-align: center;
-  background: #F7B35E;
+  background: #f7b35e;
   font-size: 45px;
   border-radius: 5px;
   padding: 10px;
   font-weight: bolder;
   width: 100%;
   height: 145px;
-  color: #994B9A;
+  color: #994b9a;
   font-family: "Cantora One", sans-serif;
 }
 
-.coluna3{
+.coluna3 {
   display: flex;
   flex-direction: column;
   gap: 15px;
@@ -227,19 +237,19 @@
   border-radius: 5px;
   padding: 10px;
   font-weight: bolder;
-  color: #760306; 
+  color: #760306;
   font-size: 25px;
   width: 100%;
   height: 145px;
   flex-direction: column;
   font-family: "Libre Baskerville", serif;
 }
-.cardcolunas{
+.cardcolunas {
   display: flex;
   align-items: center;
-  justify-content: center; 
+  justify-content: center;
   text-align: center;
-  background: #F5CBE3;
+  background: #f5cbe3;
   border-radius: 5px;
   padding: 10px;
   font-weight: bold;
@@ -252,16 +262,16 @@
 .cardcolunas img {
   display: flex;
   width: 40%;
-  height: 100%
+  height: 100%;
 }
 
 .cardDestaque {
   display: flex;
-  background: #FFEEF4;
+  background: #ffeef4;
   font-size: 35px;
   width: 100%;
   height: 464px;
-  color: #EB7699;
+  color: #eb7699;
   font-weight: bold;
   border-radius: 5px;
   align-items: center;
@@ -273,9 +283,9 @@
   font-weight: bolder;
   gap: 10px;
 }
-.cap{
+.cap {
   display: flex;
-  color: #EB7699;
+  color: #eb7699;
   justify-content: center;
   font-size: 10px;
 }
