--- a/assets/styles/tema.css
+++ b/assets/styles/tema.css
@@ -21,23 +21,22 @@
   padding: 16px;
 }
 
-.perfil {
+.perfil button {
   width: 4vw;
   border-radius: 50%;
   background: #bfbaff;
+  border: #b9bef2;
 }
 
-.area ul img {
+.area ul button {
   padding: 15px;
   margin: 5px;
-  border: 1px solid #aaa8c5;
-  font-size: 40px;
-  cursor: pointer;
-  background-color: #dee1ff;
-  width: 100%;
+  width: 4vw;
   display: flex;
   border-radius: 10px;
-  justify-content: center;
+  justify-content: flex-end;
+  background-color: #dee1ff;
+  border: 1px #aaa8c5 solid;
   align-items: center;
 }
 
@@ -54,25 +53,26 @@
 }
 
 .busca {
-  display: flex;
-  width: 81vw;
-  margin-bottom: 21px;
   width: 100%;
-  background-color: #ffffff;
-  padding: 5px;
-  border-radius: 20px;
-  border: 1px solid rgb(255, 255, 255);
-}
-
-.busca p {
   display: flex;
   align-items: center;
-  color: #a8a8a8;
+  background-color: #ffffff;
+  border-radius: 20px;
+  padding: 5px;
 }
-.busca img {
-  display: flex;
-  width: 2vw;
+
+.pesquisa img {
+  width: 4%;
 }
+
+.pesquisa input {
+  border: none;
+  outline: none;
+  flex: 1;
+  font-size: 14px;
+  background: transparent;
+}
+
 .quadrado_roxo {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
