--- a/assets/styles/chat.css
+++ b/assets/styles/chat.css
@@ -50,7 +50,7 @@
   justify-content: flex-end;
   background-color: #c4c0fb;
   border: 1px#C4C0FB solid;
-  width: 3vw;
+  width: 90%;
 }
 
 .chat {
@@ -76,7 +76,7 @@
 }
 .chat-header {
   font-weight: bold;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
   color: #7773b1;
   display: flex;
   align-items: center;
@@ -159,7 +159,7 @@
   border-top: 1px solid #ccc;
   padding-top: 5px;
   width: 100%;
-  margin-top: 305px;
+  margin-top: 100%;
   justify-items: start;
   align-items: stretch;
   justify-content: space-evenly;
