--- a/assets/styles/in.css
+++ b/assets/styles/in.css
@@ -6,11 +6,15 @@
 
 body {
   background-color: #dee1ff;
+  margin: 5%;
+  zoom: 100%;
 }
 
 .logo {
   display: flex;
   justify-content: center;
+  width: 100%;
+  height: 100%;
 }
 
 .opcoes {
@@ -24,8 +28,8 @@ body {
 .email input {
   background-color: #67a4b4;
   border-radius: 20px;
-  width: 211px;
-  height: 48px;
+  width: 100%;
+  height: 40%;
   color: white;
   padding: 15px;
   display: flex;
@@ -38,8 +42,8 @@ body {
 .nome-usuario input {
   background-color: #67a4b4;
   border-radius: 20px;
-  width: 211px;
-  height: 48px;
+  width: 100%;
+  height: 40%;
   color: white;
   padding: 15px;
   display: flex;
@@ -53,8 +57,8 @@ body {
 .senha input {
   background-color: #67a4b4;
   border-radius: 20px;
-  width: 211px;
-  height: 48px;
+  width: 100%;
+  height: 40%;
   color: white;
   padding: 15px;
   display: flex;
