--- a/assets/styles/per.css
+++ b/assets/styles/per.css
@@ -16,7 +16,8 @@ body {
   flex-direction: column;
   align-items: flex-start;
   gap: 30px;
-  margin: 70px;
+  padding: 10%;
+  zoom: 120%;
 }
 
 .direita {
@@ -24,6 +25,7 @@ body {
   justify-content: flex-end;
   align-items: flex-start;
   margin: 30px;
+  zoom: 120%;
 }
 
 .persona {
