--- a/assets/styles/quest.css
+++ b/assets/styles/quest.css
@@ -12,12 +12,13 @@ body {
   background-repeat: no-repeat;
   background-clip: initial;
   justify-content: center;
+  zoom: 100%;
 }
 
 .titulo {
   display: flex;
   justify-content: center;
-  font-size: 40px;
+  font-size: 220%;
   color: #66629a;
   font-family: "Pattaya", sans-serif;
   font-weight: 400;
@@ -25,7 +26,7 @@ body {
 }
 
 .perfil button {
-  width: 34px;
+  width: 6%;
   display: flex;
   background-color: #dee1ff;
   border: 1px #dee1ff solid;
@@ -36,8 +37,8 @@ body {
 .inseguranças input {
   background-color: white;
   border-radius: 20px;
-  width: 390px;
-  height: 40px;
+  width: 100%;
+  height: 5vh;
   gap: 19px;
   border: #ffff;
   padding: 5px;
@@ -54,8 +55,8 @@ body {
 .autoestima input {
   background-color: white;
   border-radius: 20px;
-  width: 390px;
-  height: 40px;
+  width: 100%;
+  height: 5vh;
   border: #ffff;
   padding: 5px;
 }
@@ -71,8 +72,8 @@ body {
 .confiança input {
   background-color: white;
   border-radius: 20px;
-  width: 390px;
-  height: 40px;
+  width: 100%;
+  height: 5vh;
   border: #ffff;
   padding: 5px;
 }
@@ -88,8 +89,8 @@ body {
 .medo input {
   background-color: white;
   border-radius: 20px;
-  width: 390px;
-  height: 40px;
+  width: 100%;
+  height: 5vh;
   border: #ffff;
   padding: 5px;
 }
@@ -105,8 +106,8 @@ body {
 .avaliação input {
   background-color: white;
   border-radius: 20px;
-  width: 390px;
-  height: 40px;
+  width: 100%;
+  height: 5vh;
   border: #ffff;
   padding: 5px;
 }
@@ -122,8 +123,8 @@ body {
 .melhoras input {
   background-color: white;
   border-radius: 20px;
-  width: 390px;
-  height: 40px;
+  width: 100%;
+  height: 5vh;
   border: #ffff;
   padding: 10px;
 }
@@ -164,16 +165,18 @@ p {
   color: #ffff;
   border: 1px #67a4b4 solid;
   background-color: #67a4b4;
+
   align-items: center;
   justify-content: center;
-  margin: 10px;
-  width: 158px;
-  height: 35px;
-  border-radius: 20px;
+  padding: 5px;
+  width: 500%;
+  height: 4vh;
+  border-radius: 50px;
 }
 
 .entre {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 90%;
 }
